--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^13.1.1",
     "@angular/platform-browser-dynamic": "^13.1.1",
     "@angular/router": "^13.1.1",
+    "@angular/service-worker": "^13.1.1",
     "bootstrap": "^3.4.1",
     "core-js": "^3.1.2",
     "rxjs": "^6.0.0",
